It2Me Native Messaging Host crash

This is a regression caused by the recent migration to SimpleUrlLoader:
https://chromium-review.googlesource.com/1194042

I had thought all of our binaries now had the correct Mojo dependencies
added but it looks like the NMH binary was missed.

Bug: 879593
Change-Id: I2858524d1d78abce45e7a6a34a8739ad47320a5e
Reviewed-on: https://chromium-review.googlesource.com/1199705
Reviewed-by: Antonio Gomes <tonikitoo@igalia.com>
Commit-Queue: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588068}
Former-commit-id: 82548bb487484b95a1b6d2f5031dee6e31d860e8